# pgcopylib

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
pgcopy_parser/: __init__.py  enums.py  reader.py  structs.py
pgcopy_parser/parse/: __init__.py  arrays.py  dates.py  digits.py  ipaddrs.py  jsons.py  nullables.py  strings.py  uuids.py
pgcopylib/: __init__.py  constants.py  enums.py  errors.py  pgcopy.py  reader.py  structs.py  writer.py
pgcopylib/dtypes/: __init__.py  arrays.py  dates.py  digits.py  geometrics.py  ipaddrs.py  jsons.py  nullables.py  strings.py  uuids.py
pgcopylib/parse/: __init__.py  arrays.py  dates.py  digits.py  geometrics.py
src/pgcopylib/: __init__.py  common.c  common.pyx  reader.py  writer.py
src/pgcopylib/common/dtypes/: dtype.py
src/pgcopylib/common/dtypes/functions/: arrays.pyx  dates.pyx  digits.pxd  digits.pyx  strings.pyx
src/pgcopylib/dtypes/: __init__.py  arrays.c  arrays.pyx  dates.c  dates.pyx  digits.c  digits.pyx  geometrics.c  geometrics.pyx  ipaddrs.c  ipaddrs.pyx  jsons.c  jsons.pyx  strings.c  strings.pyx  uuids.c  uuids.pyx
