[build-system]
requires = ["setuptools<70", "wheel", "Cython==0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "pgcopylib"
version = "0.2.2.6"
description = "PGCopy bynary dump parser."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/0xMihalich/pgcopylib"
Documentation = "https://github.com/0xMihalich/pgcopylib#readme"
Repository = "https://github.com/0xMihalich/pgcopylib"
Changelog = "https://github.com/0xMihalich/pgcopylib/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["**/*.pyx", "**/*.pyi", "**/*.pxd", "*.pxd", "*.pyd", "*.md", "*.txt"]
